After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 795012 - meson mingw build fixes
meson mingw build fixes
Status: RESOLVED FIXED
Product: pango
Classification: Platform
Component: win32
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-win32 maintainers
pango-maint
Depends on:
Blocks:
 
 
Reported: 2018-04-05 20:38 UTC by Christoph Reiter (lazka)
Modified: 2018-04-05 20:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
win32: remove redundant function declarations (1.57 KB, patch)
2018-04-05 20:38 UTC, Christoph Reiter (lazka)
committed Details | Review
meson: don't use quotes in help2man options to work around a MinGW Python bug (1.02 KB, patch)
2018-04-05 20:39 UTC, Christoph Reiter (lazka)
committed Details | Review

Description Christoph Reiter (lazka) 2018-04-05 20:38:14 UTC
I was trying to build gtk which pulled it in as a subproject and failed
Comment 1 Christoph Reiter (lazka) 2018-04-05 20:38:42 UTC
Created attachment 370560 [details] [review]
win32: remove redundant function declarations
Comment 2 Christoph Reiter (lazka) 2018-04-05 20:39:10 UTC
Created attachment 370561 [details] [review]
meson: don't use quotes in help2man options to work around a MinGW Python bug
Comment 3 Ignacio Casal Quinteiro (nacho) 2018-04-05 20:44:59 UTC
Review of attachment 370561 [details] [review]:

Fine for me
Comment 4 Ignacio Casal Quinteiro (nacho) 2018-04-05 20:45:30 UTC
Review of attachment 370560 [details] [review]:

Sure
Comment 5 Christoph Reiter (lazka) 2018-04-05 20:51:28 UTC
Thanks!