win32: remove redundant function declarations

The meson build uses -Werror=redundant-decls and fails.

https://bugzilla.gnome.org/show_bug.cgi?id=795012